tests/baselines/reference/unreachableJavascriptChecked.errors.txt
tests/cases/compiler/unreachable.js(3,5): error TS7027: Unreachable code detected.


==== tests/cases/compiler/unreachable.js (1 errors) ====
    function unreachable() {
        return 1;
        return 2;
        ~~~~~~
!!! error TS7027: Unreachable code detected.
    }